# store

./: Cargo.toml
src/: lib.rs  main.rs
static/: styles.css
templates/: index.html
