[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
sailfish = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
